FIX | Z-index main

--- a/src/components/MainContainer/MainContainer.module.scss
+++ b/src/components/MainContainer/MainContainer.module.scss
@@ -19,6 +19,7 @@
 
 .wrapper {
   position: relative;
+  z-index: -1;
   flex: 1;
   display: flex;
   flex-direction: column;
